--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
+    "react-transition-group": "^4.3.0",
     "react-weui": "^1.2.2",
     "styled-components": "^4.4.0",
     "weui": "^1.1.0"
