--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "dayjs": "^1.8.17",
     "history": "^4.10.1",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.14",
