--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dayjs": "^1.8.17",
     "history": "^4.10.1",
     "react": "^16.9.0",
+    "react-autosize-textarea": "^7.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-circle": "^1.1.1",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.0",
