--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "dayjs": "^1.8.17",
     "history": "^4.10.1",
+    "howler": "^2.1.2",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-autosize-textarea": "^7.0.0",
