--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-autosize-textarea": "^7.0.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-circle": "^1.1.1",
+    "react-countdown-now": "^2.1.2",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "react-router-dom": "^5.1.0",
