--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-circle": "^1.1.1",
     "react-countdown-now": "^2.1.2",
     "react-dom": "^16.9.0",
+    "react-dotdotdot": "^1.3.1",
     "react-icons": "^3.7.0",
+    "react-lines-ellipsis": "^0.14.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
     "react-transition-group": "^4.3.0",
