--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-transition-group": "^4.3.0",
     "react-truncate": "^2.4.0",
     "react-weui": "^1.2.2",
+    "slate": "^0.58.3",
+    "slate-react": "^0.58.3",
     "styled-components": "^4.4.0",
     "weui": "^1.1.0"
   },
