--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "howler": "^2.1.2",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
+    "is-hotkey": "^0.1.6",
     "is-wsl": "^1.1.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
@@ -68,6 +69,7 @@
     "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "slate": "^0.58.3",
+    "slate-history": "^0.58.4",
     "slate-react": "^0.58.3",
     "style-loader": "1.0.0",
     "styled-components": "^4.4.0",
