--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@typescript-eslint/parser": "^2.2.0",
     "antd": "^3.26.18",
     "antd-dayjs-webpack-plugin": "^1.0.0",
+    "axios": "^0.20.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
