--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^16.9.0",
     "react-dotdotdot": "^1.3.1",
     "react-icons": "^3.7.0",
+    "react-inlinesvg": "^2.1.1",
     "react-router-dom": "^5.1.0",
     "react-transition-group": "^4.3.0",
     "react-truncate": "^2.4.0",
