--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "ahooks": "^2.9.2",
     "antd": "^3.26.18",
     "antd-dayjs-webpack-plugin": "^1.0.0",
     "axios": "^0.20.0",
