--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "classnames": "^2.2.6",
+    "clipboard": "^2.0.6",
     "css-loader": "2.1.1",
     "dayjs": "^1.8.17",
     "dotenv": "6.2.0",
@@ -68,6 +69,7 @@
     "react-dotdotdot": "^1.3.1",
     "react-icons": "^3.7.0",
     "react-inlinesvg": "^2.1.1",
+    "react-json-tree": "^0.13.0",
     "react-router-dom": "^5.1.0",
     "react-transition-group": "^4.3.0",
     "react-truncate": "^2.4.0",
